--- a/pmp/static/partials/historical.html
+++ b/pmp/static/partials/historical.html
@@ -11,8 +11,8 @@
       </p>
       <div ng-repeat="submitted in listSubmitted" class="row zebra-lines small-padding">
         <div class="col-sm-4">
-          <a ng-if="submitted.r.indexOf('ReReco') == -1" ng-href="https://cms-pdmv.cern.ch/mcm/requests?prepid={{submitted.r}}" target="_blank">{{submitted.r}}</a>
-          <a ng-if="submitted.r.indexOf('ReReco') != -1" ng-href="https://dmytro.web.cern.ch/dmytro/cmsprodmon/workflows.php?prep_id={{submitted.r}}" target="_blank">{{submitted.r}}</a>
+          <a ng-if="submitted.r.indexOf('ReReco') == -1 && submitted.r.indexOf('CMSSW') == -1" ng-href="https://cms-pdmv.cern.ch/mcm/requests?prepid={{submitted.r}}" target="_blank">{{submitted.r}}</a>
+          <a ng-if="submitted.r.indexOf('ReReco') != -1 || submitted.r.indexOf('CMSSW') != -1" ng-href="https://dmytro.web.cern.ch/dmytro/cmsprodmon/workflows.php?prep_id={{submitted.r}}" target="_blank">{{submitted.r}}</a>
           <small title="Number of events estimated from {{submitted.est}}" style="color:red" ng-show="submitted.est"><br>(Estimate from {{submitted.est}})</small>
         </div>
         <div ng-hide="humanReadable" class="col-sm-2">
@@ -52,8 +52,8 @@
       </p>
       <div ng-repeat="done in listDone" class="row zebra-lines small-padding">
         <div class="col-sm-4">
-          <a ng-if="done.r.indexOf('ReReco') == -1" ng-href="https://cms-pdmv.cern.ch/mcm/requests?prepid={{done.r}}" target="_blank">{{done.r}}</a>
-          <a ng-if="done.r.indexOf('ReReco') != -1" ng-href="https://dmytro.web.cern.ch/dmytro/cmsprodmon/workflows.php?prep_id={{done.r}}" target="_blank">{{done.r}}</a>
+          <a ng-if="done.r.indexOf('ReReco') == -1 && done.r.indexOf('CMSSW') == -1" ng-href="https://cms-pdmv.cern.ch/mcm/requests?prepid={{done.r}}" target="_blank">{{done.r}}</a>
+          <a ng-if="done.r.indexOf('ReReco') != -1 || done.r.indexOf('CMSSW') != -1" ng-href="https://dmytro.web.cern.ch/dmytro/cmsprodmon/workflows.php?prep_id={{done.r}}" target="_blank">{{done.r}}</a>
           <small title="Number of events estimated from {{done.est}}" style="color:red" ng-show="done.est"><br>(Estimate from {{done.est}})</small>
         </div>
         <div ng-hide="humanReadable" class="col-sm-2">
