--- a/pmp/static/partials/present.html
+++ b/pmp/static/partials/present.html
@@ -28,31 +28,30 @@
                   data="data"></column-chart>
     
   </div>
-  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center" ng-show="selectedBin.length">
+  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center" ng-if="selectedBin.length">
     <p>Requests (<b>{{selectedBin.length}}</b>) in selected bar</p>
     <div ng-repeat="binEntry in selectedBin" class="row zebra-lines small-padding">
       <div class="col-sm-4">
-        <a ng-if="binEntry.prepid.indexOf('ReReco') == -1 && binEntry.prepid.indexOf('CMSSW') == -1" ng-href="https://cms-pdmv.cern.ch/mcm/requests?prepid={{binEntry.prepid}}" target="_blank">{{binEntry.prepid}}</a>
-        <a ng-if="binEntry.prepid.indexOf('ReReco') != -1 || binEntry.prepid.indexOf('CMSSW') != -1" ng-href="https://dmytro.web.cern.ch/dmytro/cmsprodmon/workflows.php?prep_id={{binEntry.prepid}}" target="_blank">{{binEntry.prepid}}</a>
-        <small ng-show="binEntry.growing_fake" style="color:red" title="This is a part of {{binEntry.prepid}} counted as done">(Partial)</small>
+        <a ng-href="{{binEntry.url}}" target="_blank">{{binEntry.prepid}}</a>
+        <small ng-if="binEntry.growing_fake" style="color:red" title="This is a part of {{binEntry.prepid}} counted as done">(Partial)</small>
         <br><small>{{binEntry.dataset_name}}</small>
-        <small title="Number of completed events estimated from {{binEntry.estimate_from}}" style="color:red" ng-show="binEntry.estimate_from"><br>(Estimate from {{binEntry.estimate_from}})</small>
+        <small title="Number of completed events estimated from {{binEntry.estimate_from}}" style="color:red" ng-if="binEntry.estimate_from"><br>(Estimate from {{binEntry.estimate_from}})</small>
       </div>
       <div class="col-sm-2">
-        <span ng-show="!growingMode || binEntry.status !== 'submitted'">Expected: </span>
-        <span ng-show="growingMode && binEntry.status === 'submitted'">Left: </span>
-        <b ng-show="!humanReadable">{{binEntry.total_events}}</b>
-        <b ng-show="humanReadable" title="{{binEntry.total_events}}">{{binEntry.total_events | readableNumbers}}</b>
+        <span ng-if="!growingMode || binEntry.status !== 'submitted'">Expected: </span>
+        <span ng-if="growingMode && binEntry.status === 'submitted'">Left: </span>
+        <b ng-if="!humanReadable">{{binEntry.total_events}}</b>
+        <b ng-if="humanReadable" title="{{binEntry.total_events}}">{{binEntry.total_events | readableNumbers}}</b>
       </div>
       <div class="col-sm-2">
         Done:
-        <b ng-show="!humanReadable">{{binEntry.completed_events}}</b>
-        <b ng-show="humanReadable" title="{{binEntry.completed_events}}">{{binEntry.completed_events | readableNumbers}}</b>
+        <b ng-if="!humanReadable">{{binEntry.completed_events}}</b>
+        <b ng-if="humanReadable" title="{{binEntry.completed_events}}">{{binEntry.completed_events | readableNumbers}}</b>
       </div>
       <div class="col-sm-1">
         Status:
-        <b ng-hide="binEntry.growing_fake">{{binEntry.status}}</b>
-        <b ng-show="binEntry.growing_fake" title="This request is actually submitted, but produced part is counted as done"><i>"done"</i></b>
+        <b ng-if="!binEntry.growing_fake">{{binEntry.status}}</b>
+        <b ng-if="binEntry.growing_fake" title="This request is actually submitted, but produced part is counted as done"><i>"done"</i></b>
       </div>
       <div class="col-sm-2">
         Priority: <b>{{binEntry.priority}}</b>
