--- a/pmp/static/partials/historical.html
+++ b/pmp/static/partials/historical.html
@@ -5,26 +5,25 @@
                      human-readable-numbers="humanReadable"
                      big-number-formatter="formatBigNumber"
                      class="spacing"><div class="historical-drilldown" id="historical-drilldown"></div></linear-lifetime>
-    <div ng-hide="listSubmitted.length == 0">
+    <div ng-if="listSubmitted.length != 0">
       <p class="mt-4">
         List of requests (<b>{{listSubmitted.length}}</b>) in status <b>submitted</b>
       </p>
       <div ng-repeat="submitted in listSubmitted" class="row zebra-lines small-padding">
         <div class="col-sm-4">
-          <a ng-if="submitted.r.indexOf('ReReco') == -1 && submitted.r.indexOf('CMSSW') == -1" ng-href="https://cms-pdmv.cern.ch/mcm/requests?prepid={{submitted.r}}" target="_blank">{{submitted.r}}</a>
-          <a ng-if="submitted.r.indexOf('ReReco') != -1 || submitted.r.indexOf('CMSSW') != -1" ng-href="https://dmytro.web.cern.ch/dmytro/cmsprodmon/workflows.php?prep_id={{submitted.r}}" target="_blank">{{submitted.r}}</a>
-          <small title="Number of events estimated from {{submitted.est}}" style="color:red" ng-show="submitted.est"><br>(Estimate from {{submitted.est}})</small>
+          <a ng-href="https://cms-pdmv.cern.ch/mcm/requests?prepid={{submitted.url}}" target="_blank">{{submitted.r}}</a>
+          <small title="Number of events estimated from {{submitted.est}}" style="color:red" ng-if="submitted.est"><br>(Estimate from {{submitted.est}})</small>
         </div>
-        <div ng-hide="humanReadable" class="col-sm-2">
+        <div ng-if="!humanReadable" class="col-sm-2">
           Expected: <b>{{submitted.x}}</b>
         </div>
-        <div ng-hide="!humanReadable" class="col-sm-2">
+        <div ng-if="humanReadable" class="col-sm-2">
           Expected: <b title="{{submitted.x}}">{{submitted.x | readableNumbers}}</b>
         </div>
-        <div ng-hide="humanReadable" class="col-sm-2">
+        <div ng-if="!humanReadable" class="col-sm-2">
           Produced: <b>{{submitted.d}}</b>
         </div>
-        <div ng-hide="!humanReadable" class="col-sm-2">
+        <div ng-if="humanReadable" class="col-sm-2">
           Produced: <b title="{{submitted.d}}">{{submitted.d | readableNumbers}}</b>
         </div>
         <div class="col-sm-2">
@@ -35,8 +34,8 @@
                  aria-valuemax="100"
                  style="color: black;
                         max-width: 100%;
-                        width:{{submitted.d / submitted.x * 100}}%;">
-              {{submitted.d / submitted.x * 100 | readableNumbers}}%
+                        width:{{submitted.perc}}%;">
+              {{submitted.perc | readableNumbers}}%
             </div>
           </div>
         </div>
@@ -46,29 +45,28 @@
       </div>
     </div>
 
-    <div ng-hide="!showDoneRequestsList || listDone.length == 0">
+    <div ng-if="showDoneRequestsList && listDone.length != 0">
       <p class="mt-4">
         List of requests (<b>{{listDone.length}}</b>) in status <b>done</b>
       </p>
       <div ng-repeat="done in listDone" class="row zebra-lines small-padding">
         <div class="col-sm-4">
-          <a ng-if="done.r.indexOf('ReReco') == -1 && done.r.indexOf('CMSSW') == -1" ng-href="https://cms-pdmv.cern.ch/mcm/requests?prepid={{done.r}}" target="_blank">{{done.r}}</a>
-          <a ng-if="done.r.indexOf('ReReco') != -1 || done.r.indexOf('CMSSW') != -1" ng-href="https://dmytro.web.cern.ch/dmytro/cmsprodmon/workflows.php?prep_id={{done.r}}" target="_blank">{{done.r}}</a>
-          <small title="Number of events estimated from {{done.est}}" style="color:red" ng-show="done.est"><br>(Estimate from {{done.est}})</small>
+          <a ng-href="https://cms-pdmv.cern.ch/mcm/requests?prepid={{done.url}}" target="_blank">{{done.r}}</a>
+          <small title="Number of events estimated from {{done.est}}" style="color:red" ng-if="done.est"><br>(Estimate from {{done.est}})</small>
         </div>
-        <div ng-hide="humanReadable" class="col-sm-2">
+        <div ng-if="!humanReadable" class="col-sm-2">
           Expected: <b>{{done.x}}</b>
         </div>
-        <div ng-hide="!humanReadable" class="col-sm-2">
+        <div ng-if="humanReadable" class="col-sm-2">
           Expected: <b title="{{done.x}}">{{done.x | readableNumbers}}</b>
         </div>
-        <div ng-hide="humanReadable" class="col-sm-2">
+        <div ng-if="!humanReadable" class="col-sm-2">
           Done: <b>{{done.d}}</b>
-          <small title="Force completed" style="color:red" ng-show="done.fc">(FC)</small>
+          <small title="Force completed" style="color:red" ng-if="done.fc">(FC)</small>
         </div>
-        <div ng-hide="!humanReadable" class="col-sm-2">
+        <div ng-if="humanReadable" class="col-sm-2">
           Done: <b title="{{done.d}}">{{done.d | readableNumbers}}</b>
-          <small title="Force completed" style="color:red" ng-show="done.fc">(FC)</small>
+          <small title="Force completed" style="color:red" ng-if="done.fc">(FC)</small>
         </div>
         <div class="col-sm-2">
           <div class="progress total-bar">
@@ -78,8 +76,8 @@
                  aria-valuemax="100"
                  style="color: black;
                         max-width: 100%;
-                        width:{{done.d / done.x * 100}}%;">
-              {{done.d / done.x * 100 | readableNumbers}}%
+                        width:{{done.perc}}%;">
+              {{done.perc | readableNumbers}}%
             </div>
           </div>
         </div>
