Adjust for PdmV production use, add try-except in save method

--- a/pmp/templates/invalid.html
+++ b/pmp/templates/invalid.html
@@ -3,7 +3,7 @@
 
   <head>
     <title>Production Monitoring Platform</title>
-    <base href="/pmp2/"/>
+    <base href="/pmp/"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
     <!--external CSS-->
