--- a/pmp/static/partials/present-stats-table.html
+++ b/pmp/static/partials/present-stats-table.html
@@ -1,5 +1,5 @@
 <div class="col-12" ng-repeat="tableName in ['chained', 'unchained', 'all']">
-  <h3 style="text-align: left !important;"><strong><span style="text-transform: capitalize;">{{tableName}}</span> requests by status (showing {{mode}}):</strong></h3>
+  <h3 style="text-align: left !important;" title="Table is showing number of {{mode}}"><strong><span style="text-transform: capitalize;">{{tableName}}</span> requests by status ({{mode}}):</strong></h3>
   <table class="table text-center col-12">
     <thead>
       <tr>
