--- a/pmp/static/partials/present.html
+++ b/pmp/static/partials/present.html
@@ -65,6 +65,7 @@
     <present-stats-table mode="mode"
                          human-readable-numbers="humanReadable"
                          growing-mode="growingMode"
+                         show-unchained-table="showUnchainedTable"
                          data="data"></present-stats-table>
   </div>
 </div>
