--- a/pmp/static/partials/advanced.html
+++ b/pmp/static/partials/advanced.html
@@ -69,6 +69,17 @@
             Estimate completed events
           </label>
         </div>
+        <div class="col-xs-12">
+          <label class="checkbox-inline col-lg-12 col-md-12 col-sm-12"
+                 ng-show="page.id == 1"
+                 title="Show table for unchained requests and a table of both - chained and unchained requests">
+            <input type="checkbox"
+                   ng-model="$parent.showUnchainedTable"
+                   ng-change="changeShowUnchainedTable()"
+                   ng-disabled="loadingData">
+            Show table for unchained requests
+          </label>
+        </div>
         <div class="col-xs-12 mt-1" ng-show="page.id == 2">
           <div class="input-group spacing"
                title="Number of data points in plot">
