--- a/pmp/static/partials/index.html
+++ b/pmp/static/partials/index.html
@@ -84,4 +84,9 @@
       </div>
     </div>
   </div>
+  <div class="row mt-1 text-center">
+    <h5 style="width: 100%">
+      Last update: <strong>{{lastUpdateAgo}}</strong>
+    </h5>
+  </div>
 </div>
