Default dataset name and output dataset check in historical statistics

--- a/pmp/static/partials/historical.html
+++ b/pmp/static/partials/historical.html
@@ -41,7 +41,7 @@
           </div>
         </div>
         <div class="col-sm-2">
-          <a ng-if="submitted.ds" ng-href="https://cmsweb.cern.ch/das/request?view=list&limit=50&instance=prod/global&input=dataset={{submitted.ods}}" target="_blank">Dataset in DAS</a>
+          <a ng-if="submitted.ods" ng-href="https://cmsweb.cern.ch/das/request?view=list&limit=50&instance=prod/global&input=dataset={{submitted.ods}}" target="_blank">Dataset in DAS</a>
         </div>
       </div>
     </div>
@@ -84,7 +84,7 @@
           </div>
         </div>
         <div class="col-sm-2">
-          <a ng-if="done.ds" ng-href="https://cmsweb.cern.ch/das/request?view=list&limit=50&instance=prod/global&input=dataset={{done.ods}}" target="_blank">Dataset in DAS</a>
+          <a ng-if="done.ods" ng-href="https://cmsweb.cern.ch/das/request?view=list&limit=50&instance=prod/global&input=dataset={{done.ods}}" target="_blank">Dataset in DAS</a>
         </div>
       </div>
     </div>
