Remove not needed style

--- a/pmp/templates/valid.html
+++ b/pmp/templates/valid.html
@@ -80,7 +80,7 @@
     </nav>
 
     <div class="container" id="ctn">
-      <div style="bottom: 120px !important;" class="panel {{popUp.style}} popup ng-hide" ng-show="popUp.show">
+      <div class="panel {{popUp.style}} popup ng-hide" ng-show="popUp.show">
         <div class="panel-heading text-uppercase">
           <i class="fa {{popUp.icon}} spacing-r"></i> 
           <strong>{{popUp.title}}</strong>
