Fix tags removal

--- a/pmp/static/partials/tags.html
+++ b/pmp/static/partials/tags.html
@@ -3,7 +3,7 @@
           ng-disabled="loadingData"
           type="button"
           class="btn btn-default btn-sm mr-1 mt-1"
-          ng-click="tagRemove(tag, page.id == 2)"
+          ng-click="tagRemove(tag)"
           style="max-width: 100%; text-overflow: ellipsis; overflow: hidden; position: relative; padding-right: 20px"
           title="Click here to remove {{tag}}">
     <span>{{tag}}</span>
