--- a/pmp/static/partials/historical.html
+++ b/pmp/static/partials/historical.html
@@ -30,7 +30,7 @@
           <small title="Force completed" style="color:red" ng-if="submitted.force_completed">(FC)</small>
         </div>
         <div class="col-sm-2">
-          <div class="progress total-bar">
+          <div class="progress total-bar" ng-show="submitted.expected > 0">
             <div class="font-shadow progress-bar pmp-orange"
                  ng-class="{'pmp-red': submitted.output_dataset_status == 'INVALID' || submitted.output_dataset_status == 'DELETED',
                             'pmp-blue': submitted.output_dataset_status == 'VALID',
@@ -77,7 +77,7 @@
           <small title="Force completed" style="color:red" ng-if="done.force_completed">(FC)</small>
         </div>
         <div class="col-sm-2">
-          <div class="progress total-bar">
+          <div class="progress total-bar" ng-show="done.expected > 0">
             <div class="font-shadow progress-bar pmp-blue"
                  ng-class="{'pmp-red': done.output_dataset_status == 'INVALID' || done.output_dataset_status == 'DELETED',
                             'pmp-blue': done.output_dataset_status == 'VALID',
