--- a/pmp/templates/valid.html
+++ b/pmp/templates/valid.html
@@ -22,6 +22,16 @@
     <script type="text/javascript" src="static/build/pmp.build.min.js"></script>
 
     <link rel="shortcut icon" type="image/x-icon" href="static/ic_fav.png" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146581194-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-146581194-1');
+    </script>
+
   </head>
   <body ng-controller="MainController">
 
