--- a/pmp/static/partials/historical.html
+++ b/pmp/static/partials/historical.html
@@ -47,7 +47,8 @@
           </div>
         </div>
         <div class="col-sm-2">
-          <a ng-if="submitted.output_dataset" ng-href="https://cmsweb.cern.ch/das/request?view=list&limit=50&instance=prod/global&input=dataset={{submitted.output_dataset}}" target="_blank">Dataset in DAS</a>
+          <a ng-if="submitted.output_dataset" ng-href="https://cmsweb.cern.ch/das/request?view=list&limit=50&instance=prod/global&input=dataset={{submitted.output_dataset}}" target="_blank">Dataset in DAS</a><br>
+          <a ng-if="submitted.workflow" ng-href="https://cms-pdmv.cern.ch/stats?workflow_name={{submitted.workflow}}" target="_blank">Workflow in Stats</a>
         </div>
       </div>
     </div>
@@ -94,7 +95,8 @@
           </div>
         </div>
         <div class="col-sm-2">
-          <a ng-if="done.output_dataset" ng-href="https://cmsweb.cern.ch/das/request?view=list&limit=50&instance=prod/global&input=dataset={{done.output_dataset}}" target="_blank">Dataset in DAS</a>
+          <a ng-if="done.output_dataset" ng-href="https://cmsweb.cern.ch/das/request?view=list&limit=50&instance=prod/global&input=dataset={{done.output_dataset}}" target="_blank">Dataset in DAS</a><br>
+          <a ng-if="done.workflow" ng-href="https://cms-pdmv.cern.ch/stats?workflow_name={{done.workflow}}" target="_blank">Workflow in Stats</a>
         </div>
       </div>
     </div>
